--- a/styles.css
+++ b/styles.css
@@ -4,20 +4,14 @@
   background-color: #ddd;
   
   display: grid;
-  grid-template-rows: 150px 150px;
-  grid-template-columns: repeat(2, 1fr);
-  grid-gap: 20px;
+/* Using min-content and max-content */
+/*  grid-template-columns: max-content 1fr 1fr min-content;*/
+/*  grid-template-rows: repeat(1, min-content);*/
   
-  grid-auto-rows: 80px;
-  
+/* Using minmax function */
+  grid-template-rows: repeat(2, minmax(150px, min-content));
+  grid-template-columns: minmax(200px, 1fr) repeat(3, minmax(20%, 50%));
 
-  grid-auto-flow: row;
-  grid-auto-columns: 0.5fr;
-  
-  /* Align grid items to grid areas */
-  align-items: center;
-/*  // Stretch / center / end / start */
-  justify-items: center;
 }
 
 .item {
@@ -27,16 +21,27 @@
   background-color: darkgreen;
 }
 
+.item--1 {
+  background-color: darkgreen;
+}
+.item--2 {
+  background-color: yellowgreen;
+}
+.item--3 {
+  background-color: blueviolet;
+}
 .item--4 {
-  background-color: darkorange;
-  grid-row: 2 / span 3;
-/*
-  align-self: start;
-  justify-self: start;
-*/
+  background-color: palevioletred;
+}
+.item--5 {
+  background-color: royalblue;
+}
+.item--6 {
+  background-color: goldenrod;
 }
 .item--7 {
-  background-color: blue;
-  grid-column: 1 / -1;
+  background-color: crimson;
 }
-
+.item--8 {
+  background-color: darkslategray;
+}
