--- a/styles.css
+++ b/styles.css
@@ -4,13 +4,15 @@
   background-color: #ddd;
   
   display: grid;
-/* Using min-content and max-content */
-/*  grid-template-columns: max-content 1fr 1fr min-content;*/
-/*  grid-template-rows: repeat(1, min-content);*/
   
-/* Using minmax function */
+/* Using auto-fill and auto-fit */
   grid-template-rows: repeat(2, minmax(150px, min-content));
-  grid-template-columns: minmax(200px, 1fr) repeat(3, minmax(20%, 50%));
+  
+  grid-template-columns: repeat(auto-fill, 100px);
+  grid-template-columns: repeat(auto-fit, 100px);
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  
+  grid-auto-rows: 150px;
 
 }
 
